--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <div>
-      [<a href="https://www.github.com/ggorlen">prettybt</a>]
+      [<a href="https://www.github.com/ggorlen/prettybt">prettybt</a>]
       Enter binary tree as comma-delimited array with<br> `<code>null</code>` for absent
       nodes or <a id="random-tree" href="javascript:void(0);">make a random tree</a>:
     </div>
