--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         night: <input id="night" type="checkbox">
       </div>
       <div>
-        background: <input size=7 id="background" value="#ffffff"> &nbsp;
-        strokeStyle: <input size=7 id="strokeStyle" value="#666666">
+        background: <input size=9 id="background" value="#ffffff"> &nbsp;
+        strokeStyle: <input size=9 id="strokeStyle" value="#666666">
       </div>
     </div>
     <canvas id="tree"></canvas>
@@ -29,16 +29,20 @@
     <script>
  
 (function () { 
-  let mode = {
-    background:document.querySelector('#background').value || '#ffffff',
-    strokeStyle:document.querySelector('#strokeStyle').value || '#666666',
-  }
   const clamp = (n, lo=7, hi=40) => Math.min(hi, Math.max(n, lo));
   const sizeElem = document.querySelector("#size");
   const entryElem = document.querySelector("#entry");
   const treeElem = document.querySelector("#tree");
-  const backgroundElem = document.querySelector("#background");
-  const strokeStyleElem = document.querySelector("#strokeStyle");
+  let backgroundElem = document.querySelector("#background");
+  let strokeStyleElem = document.querySelector("#strokeStyle");
+
+  let background = backgroundElem.value
+  let strokeStyle = strokeStyleElem.value
+
+  let mode = {  
+    background:document.querySelector('#background').value || '#ffffff',
+    strokeStyle:document.querySelector('#strokeStyle').value || '#666666',
+  }
 
   let root = PrettyBT.randomTree();
   entryElem.value = PrettyBT.arrayFromTree(root).toString();
@@ -62,14 +66,12 @@
   });
 
   backgroundElem.addEventListener("keyup", e => {
-    e.target.style.width = Math.max(e.target.value.length, 7) + "ch";
-    mode.background = e.target.value;
+    mode.background = validCompleteHexadecimalColor(e.target.value) ? e.target.value : '#ffffff';
     PrettyBT.drawBinaryTree(treeElem, root, clamp(+sizeElem.value), mode);
   });
 
   strokeStyleElem.addEventListener("keyup", e => {
-    e.target.style.width = Math.max(e.target.value.length, 7) + "ch";
-    mode.strokeStyle = e.target.value;
+    mode.strokeStyle = validCompleteHexadecimalColor(e.target.value) ? e.target.value : '#666666';
     PrettyBT.drawBinaryTree(treeElem, root, clamp(+sizeElem.value), mode);
   });
 
@@ -85,17 +87,23 @@
   });
 })();
 
-function getInvertColor(color) {  
+function getInvertColor (color) {  
+  console.log(color)
   let r = parseInt(color.substr(1,2),16);
   let g = parseInt(color.substr(3,2),16);
   let b = parseInt(color.substr(5,2),16);
+  let a = color.length > 7 ? color.substr(7, 2) : "";
 
   r = (255 - r).toString(16);
   g = (255 - g).toString(16);
   b = (255 - b).toString(16);
 
-  return "#" + (r.length < 2 ? "0" + r : r) + (g.length < 2 ? "0" + g : g) + (b.length < 2 ? "0" + b : b);
+  return "#" + (r.length < 2 ? "0" + r : r) + (g.length < 2 ? "0" + g : g) + (b.length < 2 ? "0" + b : b) + a;
 }
+
+function validCompleteHexadecimalColor (color) {
+  return /^#[0-9a-f]{6}$|^#[0-9a-f]{8}$/i.test(color)
+} 
     </script>
   </body>
 </html>
